add translation for login page

--- a/src/i18n/locale/cs.json
+++ b/src/i18n/locale/cs.json
@@ -1,5 +1,10 @@
 {
   "translation": {
-    "create": "Vytvořit"
+    "login": {
+      "title": "přihlášení",
+      "description": "Přihlašte se do naší todo aplikace pomocí Vašeho Google účtu.",
+      "loginFailed": "Přihlášení selhalo! Zkuste to prosím znovu později.",
+      "loginFailedNoJwt": "Přihlášení selhalo! Identifikační autorita nezaslala žádný JWT."
+    }
   }
 }
