add translation for Profile page

--- a/src/i18n/locale/cs.json
+++ b/src/i18n/locale/cs.json
@@ -10,6 +10,15 @@
       "title": "Oooooooops!",
       "primary": "Něco se pokazilo!",
       "secondary": "Prosím, zkuste to znovu později..."
+    },
+    "profile": {
+      "title": "profil",
+      "avatar": "avatar",
+      "firstName": "křestní jméno",
+      "lastName": "přijmení",
+      "email": "email",
+      "authority": "autorita",
+      "logout": "odhlášení"
     }
   }
 }
