add localization component

--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -24,6 +24,10 @@
       "title": "to-do",
       "create": "create",
       "createFirstList": "Write your first to=do list:"
+    },
+    "localization": {
+      "english": "en",
+      "czech": "cs"
     }
   }
 }
