--- a/src/i18n/locale/cs.json
+++ b/src/i18n/locale/cs.json
@@ -24,6 +24,10 @@
       "title": "to-do",
       "create": "vytvořit",
       "createFirstList": "Vytvořte Váš první to-do list:"
+    },
+    "localization": {
+      "english": "en",
+      "czech": "cs"
     }
   }
 }
