add TodoList page

--- a/src/i18n/locale/cs.json
+++ b/src/i18n/locale/cs.json
@@ -28,6 +28,9 @@
     "localization": {
       "english": "en",
       "czech": "cs"
+    },
+    "todo-list": {
+      "new": "přidat"
     }
   }
 }
