implement add new task feature

--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -29,7 +29,7 @@
       "english": "en",
       "czech": "cs"
     },
-    "todo-list": {
+    "addTask": {
       "new": "add"
     },
     "modal": {
