implement delete todo list feature

--- a/src/i18n/locale/cs.json
+++ b/src/i18n/locale/cs.json
@@ -32,6 +32,12 @@
     "addTask": {
       "new": "přidat"
     },
+    "todoListWidget": {
+      "modal": {
+        "title": "Odstranit",
+        "text": "Určitě chcete odstranit \"{{name}}\" seznam? Tato akce je trvalá!"
+      }
+    },
     "modal": {
       "confirmation": "OK"
     }
