--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -32,6 +32,12 @@
     "addTask": {
       "new": "add"
     },
+    "todoListWidget": {
+      "modal": {
+        "title": "Delete",
+        "text": "Are you sure you want to delete \"{{name}}\" todo list? This action is permanent!"
+      }
+    },
     "modal": {
       "confirmation": "OK"
     }
