fix typo in english translations

--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -23,7 +23,7 @@
     "todos": {
       "title": "to-do",
       "create": "create",
-      "createFirstList": "Write your first to=do list:"
+      "createFirstList": "Create your first to-do list:"
     },
     "localization": {
       "english": "en",
