implement add new todo list feature

--- a/src/i18n/locale/cs.json
+++ b/src/i18n/locale/cs.json
@@ -23,7 +23,9 @@
     "todos": {
       "title": "to-do",
       "create": "vytvořit",
-      "createFirstList": "Vytvořte Váš první to-do list:"
+      "createFirstList": "Vytvořte Váš první to-do list:",
+      "modalTitle": "Nový seznam",
+      "modalDescription": "Zadejte název nového seznamu."
     },
     "localization": {
       "english": "en",
