--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -23,7 +23,9 @@
     "todos": {
       "title": "to-do",
       "create": "create",
-      "createFirstList": "Create your first to-do list:"
+      "createFirstList": "Create your first to-do list:",
+      "modalTitle": "New list",
+      "modalDescription": "Enter name of the new list."
     },
     "localization": {
       "english": "en",
