add constructor for unsupported feature warning notification

--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -42,6 +42,10 @@
     },
     "modal": {
       "confirmation": "OK"
+    },
+    "notification": {
+      "unsupportedFeature": "Unsupported feature",
+      "unsupportedFeatureDescription": "This feature is not yet supported."
     }
   }
 }
