--- a/src/i18n/locale/cs.json
+++ b/src/i18n/locale/cs.json
@@ -42,6 +42,10 @@
     },
     "modal": {
       "confirmation": "OK"
+    },
+    "notification": {
+      "unsupportedFeature": "Nepodporovaná funkce",
+      "unsupportedFeatureDescription": "Tato funkce ještě není podporována."
     }
   }
 }
