add translations for about page component

--- a/src/i18n/translation/cs.json
+++ b/src/i18n/translation/cs.json
@@ -50,6 +50,12 @@
         }
       }
     },
+    "about": {
+      "title": "o aplikaci",
+      "author": "autor",
+      "animations": "animace",
+      "animationDescription": "{{name}} od {{author}}"
+    },
     "modal": {
       "confirmation": "OK"
     },
